--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "homepage": "https://github.com/nimanr/ChatToLearn#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {}
+    "socket.io": "^2.3.0",
+    "utf-8-validate": "^5.0.7",
+    "ws": "^8.2.3"
+  }
 }
